# frontier

./: .gitignore  Cargo.toml  README.md  output.toml  test.toml
resources/test/bad/: args_not_array.toml  install_not_array.toml  missing_package_manager_name.toml  missing_pkgs_install.toml  package_manager_not_string.toml  unsupported_package_manager.toml
src/: args.rs  config.rs  generate.rs  generate_pacman.rs  generate_yay.rs  install.rs  lib.rs  main.rs
