[package]
name = "frontier"
version = "0.0.3.1"
edition = "2021"
description = "[WIP] A tool to reproduce distro installations."
license = "MIT"
authors = ["Peter Chaplin-Smith"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"
